@@ -1,12 +1,13 @@
 package com.practice.functionalProgramming;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class FunctionalProgrammingRunner3 {
 
     public static void main(String[] args) {
-        List<Integer> numbers=List.of(3,4,5,6,7);
-        List<String> animals=List.of("Lion","Tiger","Rat");
+        List<Integer> numbers= Arrays.asList(3, 4, 5, 6, 7);
+        List<String> animals=Arrays.asList("Lion","Tiger","Rat");
 
         //printLowerCase(animals);
 
